# ROS

Nautilus_concours_rasp/install/: local_setup.sh  setup.sh
Nautilus_concours_rasp/install/conversion_msgs/share/conversion_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Nautilus_concours_rasp/install/sub_affichage/lib/sub_affichage/: sub_affichage
Nautilus_concours_rasp/install/sub_affichage/share/sub_affichage/: package.bash  package.dsv  package.ps1  package.sh  package.zsh  sub_affichage_launch.py
Nautilus_concours_rasp/install/sub_control/share/sub_control/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Nautilus_concours_rasp/install/sub_ekf/share/sub_ekf/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Nautilus_concours_rasp/install/sub_etat_py/lib/sub_etat_py/: etat_node
Nautilus_concours_rasp/install/sub_etat_py/share/sub_etat_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Nautilus_concours_rasp/install/sub_guidage_c/lib/sub_guidage_c/: guidage_base  guidage_simple  guidage_sonar1  guidage_sonar2
Nautilus_concours_rasp/install/sub_guidage_c/share/sub_guidage_c/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Nautilus_concours_rasp/install/sub_interface_arduino_c/share/sub_interface_arduino_c/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Nautilus_concours_rasp/install/sub_interface_arduino_py/share/sub_interface_arduino_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Nautilus_concours_rasp/install/sub_map/share/sub_map/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Nautilus_concours_rasp/install/sub_sonar/lib/sub_sonar/: sonar_scan
Nautilus_concours_rasp/install/sub_sonar/share/sub_sonar/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Nautilus_concours_rasp/install/sub_teleop/lib/sub_teleop/: teleop_twist_keyboard_vf  (+3 more)
Nautilus_concours_rasp/log/: latest_build
Nautilus_concours_rasp/src/conversion_msgs/: CMakeLists.txt
Nautilus_concours_rasp/src/conversion_msgs/launch/: sub_general_launch_reel.py  sub_general_launch_reel_auto4 copy.py  sub_general_launch_reel_automatic1.py
Nautilus_concours_rasp/src/sub_affichage/: package.xml  setup.cfg  setup.py
Nautilus_concours_rasp/src/sub_control/: CMakeLists.txt
Nautilus_concours_rasp/src/sub_control/config/: params.yaml
Nautilus_concours_rasp/src/sub_control/src/: position_controller_node.cpp  simple_velocity_controller_node.cpp  test1_velocity_controller_node.cpp  velocity_controller_node.cpp
Nautilus_concours_rasp/src/sub_ekf/: package.xml  setup.cfg  setup.py
Nautilus_concours_rasp/src/sub_ekf/sub_ekf/: main_ekf_node.py
Nautilus_concours_rasp/src/sub_etat_py/: package.xml  setup.cfg  setup.py
Nautilus_concours_rasp/src/sub_guidage_c/: CMakeLists.txt
Nautilus_concours_rasp/src/sub_guidage_c/config/: params.yaml
Nautilus_concours_rasp/src/sub_guidage_c/launch/: sub_guidage_sonar1_launch.py  sub_guidage_sonar2_launch.py  sub_guidage_sonar3_launch.py
Nautilus_concours_rasp/src/sub_guidage_c/src/: guidage_base.cpp  guidage_simple.cpp  guidage_sonar1.cpp  guidage_sonar2.cpp  guidage_sonar3.cpp
Nautilus_concours_rasp/src/sub_interface_arduino_c/: CMakeLists.txt
Nautilus_concours_rasp/src/sub_interface_arduino_c/src/: ArduinoJson-v6.21.2.cpp  serial.cpp
Nautilus_concours_rasp/src/sub_interface_arduino_py/: package.xml  setup.cfg  setup.py
Nautilus_concours_rasp/src/sub_interface_arduino_py/sub_interface_arduino_py/: interface_arduino.py
Nautilus_concours_rasp/src/sub_map/: package.xml  setup.cfg  setup.py
Nautilus_concours_rasp/src/sub_map/sub_map/: map_node.py
Nautilus_concours_rasp/src/sub_sonar/: setup.cfg  setup.py
Nautilus_concours_rasp/src/sub_sonar/launch/: sonar1_launch.py
Nautilus_concours_rasp/src/sub_sonar/sub_sonar/: sonar_node.py
Nautilus_concours_rasp/src/sub_teleop/: README.md  package.xml  setup.cfg  setup.py
Nautilus_concours_rasp/src/sub_teleop/sub_teleop/: teleop_twist_keyboard_vf3.py
Nautilus_concours_rasp/src/sub_teleop_play/: CMakeLists.txt  package.xml
Nautilus_concours_rasp/src/sub_teleop_play/config/: params.yaml
Nautilus_concours_rasp/src/sub_teleop_play/src/: teleop_twist_playstation.cpp
(+32 files in other folders)
